# Iterative-Closest-Point-ICP-

./: CMakeLists.txt  README.md
include/: icp_GN.h  icp_svd.h  my_icp_base.h
show/: plot_traj.py  traj_GN_100points.txt  traj_GN_500points.txt  traj_svd_100points.txt  traj_svd_500points.txt
src/: icp_GN.cpp  icp_svd.cpp  my_icp_base.cpp
test/: gt.txt  icp_GN_traj.txt  my_svd_traj.txt  odomtery.cpp  pcl_icp_traj.txt  zhihu_svd_traj.txt
